--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mysql": "^2.17.1"
+    "dotenv": "^8.2.0",
+    "mysql": "^2.17.1",
+    "pino": "^5.14.0",
+    "pino-pretty": "^3.4.0",
+    "yargs": "^15.0.2"
   }
 }
